--- a/00133523_practica5_sección2/Ejercicio 3.html
+++ b/00133523_practica5_sección2/Ejercicio 3.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+    <meta charset="UTF-8">
 <head>
-<title>Ejercicio 3– Guía 5</title>
+<title>Ejercicio 3- Guía 5</title>
 </head>
 <body>
 
